--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 20px; background: #f4f4f4; }
         h1 { color: #333; }
-        iframe { width: 100%; max-width: 800px; height: 450px; border: none; }
+        .video-container { position: relative; width: 100%; max-width: 800px; height: 0; padding-bottom: 56.25%; margin: 20px auto; }
+        iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
     </style>
 </head>
 <body>
     <h1>My Class Video Project</h1>
-
-    <iframe src="https://youtu.be/T_2QQ3iDQsg" allowfullscreen></iframe>
+    <p>Here's my 2-minute video submission.</p>
+    <div class="video-container">
+        <iframe 
+            src="https://www.youtube.com/embed/T_2QQ3iDQsg?rel=0&modestbranding=1&playsinline=1" 
+            title="Class Video" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
+    </div>
     <p>&copy; 2025 Bowen Nelson</p>
 </body>
 </html>
