--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>My Class Video Project</h1>
+    <h1>Digital Literacy Video Project</h1>
     <p>Here's my 2-minute video submission.</p>
     <div class="video-container">
         <iframe 
