--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         </iframe>
     </div>
     <p>&copy; 2025 Bowen Nelson</p>
-</body>
+ <hr>
+  <p><a href="chrome://dino/" target="_blank" style="color: #4285f4; text-decoration: none; font-weight: bold;">🦕 Play the Google Chrome Dinosaur Game!</a></p>
+ </body>
 </html>
