--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Here's my 2-minute video submission.</p>
     <div class="video-container">
         <iframe 
-            src="https://www.youtube.com/embed/T_2QQ3iDQsg?rel=0&modestbranding=1&playsinline=1" 
+            src="https://www.youtube.com/embed/UB30F1Nfl7M?rel=0&modestbranding=1&playsinline=1" 
             title="Class Video" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen>
