--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="video-wrapper">
         <iframe
-            src="https://www.youtube.com/embed/UB30F1Nfl7M?rel=0&modestbranding=1&playsinline=1"
+            src="hhttps://youtube.com/shorts/7pcS1W7_QdU"
             title="Class Video"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
