--- a/index.html
+++ b/index.html
@@ -5,65 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bowen Nelson – Digital Literacy Short</title>
     <style>
-        *, *::before, *::after { box-sizing:border-box; margin:0; padding:0; }
-        html, body { height:100%; font-family:Arial,Helvetica,sans-serif; background:#f4f4f4; }
+        *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+        html, body { height: 100%; font-family: Arial, sans-serif; background: #f4f4f4; }
 
         body {
-            display:flex;
-            flex-direction:column;
-            align-items:center;
-            padding:20px 10px;
-            gap:1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px 10px;
+            gap: 1rem;
         }
 
-        h1 { font-size:1.9rem; color:#333; }
-        p  { color:#555; max-width:800px; text-align:center; }
+        h1 { font-size: 1.9rem; color: #333; }
+        p  { color: #555; max-width: 800px; text-align: center; }
 
-        /* ---------- PLAYER ---------- */
-        .short-wrapper {
-            position:relative;
-            width:100%;
-            max-width:560px;               /* YouTube Shorts recommended width */
-            margin:0 auto;
-            border-radius:12px;
-            overflow:hidden;
-            box-shadow:0 6px 20px rgba(0,0,0,.15);
+        /* ---- 9:16 PLAYER (YouTube Short) ---- */
+        .short-container {
+            position: relative;
+            width: 100%;
+            max-width: 560px;               /* YouTube Shorts recommended */
+            aspect-ratio: 9 / 16;           /* True 9:16 */
+            margin: 0 auto;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 6px 20px rgba(0,0,0,.15);
+            background: #000;               /* Fallback if iframe fails */
         }
 
         iframe {
-            position:absolute;
-            inset:0;
-            width:100%;
-            height:100%;
-            border:none;
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
-        /* ---------- MOBILE FULL-SCREEN (crop side bars) ---------- */
-        @media (max-width:768px) {
-            body { padding:0; gap:0.8rem; }
-            h1 { font-size:1.6rem; }
-            p  { font-size:0.95rem; }
+        /* ---- MOBILE: FULL SCREEN ---- */
+        @media (max-width: 768px) {
+            body { padding: 0; gap: 0.8rem; }
+            h1 { font-size: 1.6rem; }
+            p  { font-size: 0.95rem; }
 
-            .short-wrapper {
-                width:100vw;
-                height:100vh;
-                max-width:unset;
-                border-radius:0;
-                box-shadow:none;
-            }
-
-            iframe {
-                /* 16:9 player → 9:16 crop = 177.78% width */
-                width:177.78vh;
-                height:100vh;
-                max-width:177.78vh;
-                max-height:100vh;
-                top:50%; left:50%;
-                transform:translate(-50%,-50%);
+            .short-container {
+                width: 100vw;
+                height: 100vh;
+                max-width: unset;
+                aspect-ratio: unset;
+                border-radius: 0;
+                box-shadow: none;
             }
         }
 
-        footer { margin-top:auto; padding:1rem 0; color:#777; font-size:.9rem; text-align:center; }
+        footer {
+            margin-top: auto;
+            padding: 1rem 0;
+            color: #777;
+            font-size: .9rem;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -71,9 +70,10 @@
     <h1>Digital Literacy Short</h1>
     <p>Here’s my 2-minute YouTube Short submission.</p>
 
-    <div class="short-wrapper">
+    <!-- REPLACE VIDEO_ID_HERE WITH YOUR SHORT ID -->
+    <div class="short-container">
         <iframe
-            src="https://www.youtube.com/embed/UB30F1Nfl7M?rel=0&modestbranding=1&playsinline=1"
+            src="https://www.youtube.com/embed/VIDEO_ID_HERE?rel=0&modestbranding=1&playsinline=1"
             title="Digital Literacy Short"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
