--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
     <h1>Digital Literacy Short</h1>
     <p>Here’s my 2-minute YouTube Short submission.</p>
 
-    <!-- REPLACE WITH YOUR ACTUAL VIDEO ID -->
     <div class="short-container">
         <iframe
-            src="https://www.youtube.com/embed/UB30F1Nfl7M?autoplay=1&mute=1&playsinline=1&rel=0&modestbranding=1"
+            src="https://www.youtube.com/embed/7pcS1W7_QdU?rel=0&modestbranding=1&playsinline=1"
             title="Digital Literacy Short"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
