--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bowen Nelson – Digital Literacy Short</title>
+    <title>Bowen Nelson – Digital Literacy</title>
     <style>
         *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
         html, body { height: 100%; font-family: Arial, sans-serif; background: #f4f4f4; }
@@ -67,8 +67,8 @@
 </head>
 <body>
 
-    <h1>Digital Literacy Short</h1>
-    <p>Here’s my 2-minute YouTube Short submission.</p>
+    <h1>Digital Literacy</h1>
+    <p>.</p>
 
     <div class="short-container">
         <iframe
